[package] 
name = "dawg-city" 
version = "0.1.0" 
edition = "2021" 
 
[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
http = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } 
serde_json = { version = "1" } 
serde = { version = "1", features = ["derive"] } 
once_cell = "1"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

[dev-dependencies]
wiremock = "0.5"
