[package]
name = "dawg-city"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
http = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
thiserror = "1"

[dev-dependencies]
wiremock = "0.5"
